Added the database support for the tool, now all the tasks entered will be saved locally\n Cleared lot of bugs and imporoved the funcationality.